@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.88 (gritter) 7/3/06";
+	"@(#)/usr/ucb/otfdump.sl	6.89 (gritter) 7/3/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.88 (gritter) 7/3/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.88 (gritter) 7/3/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.89 (gritter) 7/3/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.89 (gritter) 7/3/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.88 (gritter) 7/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.89 (gritter) 7/3/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.88 (gritter) 7/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.89 (gritter) 7/3/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.88";
+const char revision[] = "6.89";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.46 (gritter) 7/3/06
@@ -26,8 +26,8 @@ n2.c: * Sccsid @(#)n2.c	1.22 (gritter) 7/3/06
 n3.c: * Sccsid @(#)n3.c	1.94 (gritter) 7/3/06
 n4.c: * Sccsid @(#)n4.c	1.29 (gritter) 7/3/06
 n5.c: * Sccsid @(#)n5.c	1.46 (gritter) 7/3/06
-n7.c: * Sccsid @(#)n7.c	1.63 (gritter) 7/3/06
-n8.c: * Sccsid @(#)n8.c	1.26 (gritter) 7/3/06
+n7.c: * Sccsid @(#)n7.c	1.64 (gritter) 7/3/06
+n8.c: * Sccsid @(#)n8.c	1.27 (gritter) 7/3/06
 n9.c: * Sccsid @(#)n9.c	1.46 (gritter) 7/3/06
 ni.c: * Sccsid @(#)ni.c	1.27 (gritter) 7/3/06
 nii.c: * Sccsid @(#)nii.c	1.33 (gritter) 7/3/06
